@@ -430,14 +430,150 @@ expr_stmt|;
 block|}
 block|}
 block|}
-DECL|method|str
-specifier|static
-name|String
-name|str
+comment|/**    * Internal use for Lucene... do not explicitly call.    */
+annotation|@
+name|Override
+DECL|method|onInit
+specifier|public
+name|void
+name|onInit
 parameter_list|(
-name|IndexCommit
-name|commit
+name|List
+name|commits
 parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// SOLR-4547: log basic data at INFO, add filenames at DEBUG.
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"SolrDeletionPolicy.onInit: commits: {}"
+argument_list|,
+operator|new
+name|CommitsLoggingInfo
+argument_list|(
+name|commits
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"SolrDeletionPolicy.onInit: commits: {}"
+argument_list|,
+operator|new
+name|CommitsLoggingDebug
+argument_list|(
+name|commits
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|updateCommits
+argument_list|(
+operator|(
+name|List
+argument_list|<
+name|IndexCommit
+argument_list|>
+operator|)
+name|commits
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Internal use for Lucene... do not explicitly call.    */
+annotation|@
+name|Override
+DECL|method|onCommit
+specifier|public
+name|void
+name|onCommit
+parameter_list|(
+name|List
+name|commits
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// SOLR-4547: log basic data at INFO, add filenames at DEBUG.
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"SolrDeletionPolicy.onCommit: commits: {}"
+argument_list|,
+operator|new
+name|CommitsLoggingInfo
+argument_list|(
+name|commits
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"SolrDeletionPolicy.onCommit: commits: {}"
+argument_list|,
+operator|new
+name|CommitsLoggingDebug
+argument_list|(
+name|commits
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|updateCommits
+argument_list|(
+operator|(
+name|List
+argument_list|<
+name|IndexCommit
+argument_list|>
+operator|)
+name|commits
+argument_list|)
+expr_stmt|;
+block|}
+DECL|class|CommitsLoggingInfo
+specifier|private
+specifier|static
+class|class
+name|CommitsLoggingInfo
+block|{
+DECL|field|commits
+specifier|private
+name|List
+argument_list|<
+name|IndexCommit
+argument_list|>
+name|commits
+decl_stmt|;
+DECL|method|CommitsLoggingInfo
+specifier|public
+name|CommitsLoggingInfo
+parameter_list|(
+name|List
+argument_list|<
+name|IndexCommit
+argument_list|>
+name|commits
+parameter_list|)
+block|{
+name|this
+operator|.
+name|commits
+operator|=
+name|commits
+expr_stmt|;
+block|}
+DECL|method|toString
+specifier|public
+specifier|final
+name|String
+name|toString
+parameter_list|()
 block|{
 name|StringBuilder
 name|sb
@@ -446,19 +582,75 @@ operator|new
 name|StringBuilder
 argument_list|()
 decl_stmt|;
-try|try
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"num="
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|commits
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|IndexCommit
+name|c
+range|:
+name|commits
+control|)
 block|{
 name|sb
 operator|.
 name|append
 argument_list|(
-literal|"commit{"
+literal|"\n\tcommit{"
 argument_list|)
 expr_stmt|;
+name|appendDetails
+argument_list|(
+name|sb
+argument_list|,
+name|c
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"}"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// add an end brace
+return|return
+name|sb
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
+DECL|method|appendDetails
+specifier|protected
+name|void
+name|appendDetails
+parameter_list|(
+name|StringBuilder
+name|sb
+parameter_list|,
+name|IndexCommit
+name|c
+parameter_list|)
+block|{
 name|Directory
 name|dir
 init|=
-name|commit
+name|c
 operator|.
 name|getDirectory
 argument_list|()
@@ -518,7 +710,7 @@ argument_list|)
 operator|.
 name|append
 argument_list|(
-name|commit
+name|c
 operator|.
 name|getSegmentsFileName
 argument_list|()
@@ -533,22 +725,74 @@ argument_list|)
 operator|.
 name|append
 argument_list|(
-name|commit
+name|c
 operator|.
 name|getGeneration
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+DECL|class|CommitsLoggingDebug
+specifier|private
+specifier|static
+class|class
+name|CommitsLoggingDebug
+extends|extends
+name|CommitsLoggingInfo
+block|{
+DECL|method|CommitsLoggingDebug
+specifier|public
+name|CommitsLoggingDebug
+parameter_list|(
+name|List
+argument_list|<
+name|IndexCommit
+argument_list|>
+name|commits
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|commits
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|appendDetails
+specifier|protected
+name|void
+name|appendDetails
+parameter_list|(
+name|StringBuilder
+name|sb
+parameter_list|,
+name|IndexCommit
+name|c
+parameter_list|)
+block|{
+name|super
+operator|.
+name|appendDetails
+argument_list|(
+name|sb
+argument_list|,
+name|c
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|sb
 operator|.
 name|append
 argument_list|(
 literal|",filenames="
 argument_list|)
+expr_stmt|;
+name|sb
 operator|.
 name|append
 argument_list|(
-name|commit
+name|c
 operator|.
 name|getFileNames
 argument_list|()
@@ -557,7 +801,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|IOException
 name|e
 parameter_list|)
 block|{
@@ -569,158 +813,7 @@ name|e
 argument_list|)
 expr_stmt|;
 block|}
-return|return
-name|sb
-operator|.
-name|toString
-argument_list|()
-return|;
 block|}
-DECL|method|str
-specifier|static
-name|String
-name|str
-parameter_list|(
-name|List
-name|commits
-parameter_list|)
-block|{
-name|StringBuilder
-name|sb
-init|=
-operator|new
-name|StringBuilder
-argument_list|()
-decl_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"num="
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|commits
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|IndexCommit
-name|commit
-range|:
-operator|(
-name|List
-argument_list|<
-name|IndexCommit
-argument_list|>
-operator|)
-name|commits
-control|)
-block|{
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"\n\t"
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-name|str
-argument_list|(
-name|commit
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|sb
-operator|.
-name|toString
-argument_list|()
-return|;
-block|}
-comment|/**    * Internal use for Lucene... do not explicitly call.    */
-annotation|@
-name|Override
-DECL|method|onInit
-specifier|public
-name|void
-name|onInit
-parameter_list|(
-name|List
-name|commits
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"SolrDeletionPolicy.onInit: commits:"
-operator|+
-name|str
-argument_list|(
-name|commits
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|updateCommits
-argument_list|(
-operator|(
-name|List
-argument_list|<
-name|IndexCommit
-argument_list|>
-operator|)
-name|commits
-argument_list|)
-expr_stmt|;
-block|}
-comment|/**    * Internal use for Lucene... do not explicitly call.    */
-annotation|@
-name|Override
-DECL|method|onCommit
-specifier|public
-name|void
-name|onCommit
-parameter_list|(
-name|List
-name|commits
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"SolrDeletionPolicy.onCommit: commits:"
-operator|+
-name|str
-argument_list|(
-name|commits
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|updateCommits
-argument_list|(
-operator|(
-name|List
-argument_list|<
-name|IndexCommit
-argument_list|>
-operator|)
-name|commits
-argument_list|)
-expr_stmt|;
 block|}
 DECL|method|updateCommits
 specifier|private
@@ -764,41 +857,21 @@ operator|-
 literal|1
 argument_list|)
 decl_stmt|;
-try|try
-block|{
+comment|// SOLR-4547: Removed the filenames from this log entry because this
+comment|// method is only called from methods that have just logged them
+comment|// at DEBUG.
 name|log
 operator|.
 name|info
 argument_list|(
-literal|"newest commit = "
+literal|"newest commit generation = "
 operator|+
 name|newest
 operator|.
 name|getGeneration
 argument_list|()
-operator|+
-name|newest
-operator|.
-name|getFileNames
-argument_list|()
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e1
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|()
-throw|;
-block|}
 name|int
 name|singleSegKept
 init|=
